# openAVEngine

./: .gitignore  README.md  build-ffmpeg.sh  cjson_note.txt
cJSON/: CMakeLists.txt
ffmpeg/: build-ffmpeg.sh  build-openh264.sh  libaacplus-2.0.2.tar
ffmpeg-linux/: build-ffmpeg-0.sh  build-ffmpeg-win.sh  build-ffmpeg.sh  build-mylib-win.sh  build-mylib.sh  build-openh264.sh  intel_hw.txt
ffmpeg-linux/ffmpeg-2.8.7/: config.asm  config.fate  config.h  config.mak  configure
ffmpeg-linux/ffmpeg-4.3.2/: config.asm  config.h  run-ffmpeg.sh
ffmpeg-linux/libaacplus-2.0.2/: Makefile  Makefile.in  aacplus-config  config.status  configure  libtool
ffmpeg-linux/libaacplus-2.0.2-win/: Makefile  Makefile.in  aacplus-config  aacplus.pc  config.h  config.h.in  config.status  configure  libtool
ffmpeg-linux/mylib/: wz_license.key
ffmpeg-linux/proj-back/: build-linux.sh  ffmpeg_api.h  ffmpeg_factory.cc  ffmpeg_factory.h  ffmpeg_mcu.cc
ffmpeg-linux/wz264/: CMakeLists.txt  Readme.md
ffmpeg-linux/wz264/docs/: wz264_encoder_sdk.md
ffmpeg-linux/wz264/include/: wz264.h  wz264_config.h  wz264enc.h
ffmpeg-linux/wz264/samples/: wz264_sample_encoder.c  wz264_sample_utils.h
ffmpeg-linux/wz264sdk/: build.sh
ffmpeg-linux/yasm-1.3.0/: config.status  genperf  genstring  re2c  yasm  (+1 more)
openfec_v1.4.2/: CMakeCache.txt  Makefile
py2c/: BUILD.gn  Makefile  Makefile-0  Makefile-1  ar-libwebrtc.sh  build-libhcsvc-win.sh  build-libhcsvc.sh  build-libhcsvc2.sh  build-libopenave.sh  build-pycall.sh  build-server.sh  cjson_note.txt  libva.so.2  mrun.sh  netem.sh  utility.cc  version
(+426 files in other folders)
